2012-06-04  Yaroslav Halchenko <debian@onerussian.com>

	* man/ipmi-oem.8.pre.in: Minor tune ups.
	
2012-06-01  Albert Chu <chu11@llnl.gov>

	Merge branch intels2600jfrevision

	* libfreeipmi/include/freeipmi/spec/ipmi-sensor-and-event-code-tables-oem-spec.h,
	libfreeipmi/spec/ipmi-sensor-and-event-code-tables-oem-spec.c:
	Update event messages for Intel S2600JF based on documentation
	changes from Intel.

2012-06-01  Albert Chu <chu11@llnl.gov>

	* Add support for Supermicro X9DRi-F OEM sensors/events.

2012-05-31  Albert Chu <chu11@llnl.gov>

	* common/toolcommon/tool-daemon-common.h,
	common/toolcommon/tool-daemon-common.c (daemon_sleep): New
	function.

	* bmc-watchdog/: Use new common functions.

	* ipmidetectd/ipmidetectd.c: Shutdown cleanly on signals.
	
2012-05-30  Albert Chu <chu11@llnl.gov>

	* man/, etc/: Add forgotten config entries.
	
2012-05-29  Albert Chu <chu11@llnl.gov>

	* man/ipmi-sel.8.pre.in: Fix typo.

	* common/toolcommon/tool-config-file-common.c: Fix parsing for
	target-slave-address.
	
2012-05-29  Albert Chu <chu11@llnl.gov>

	* common/parsecommon/parse-common.h,
	common/parsecommon/parse-common.c (parse_get_freeipmi_outofband_flags,
	parse_get_freeipmi_outofband_2_0_flags,
	parse_get_freeipmi_inband_flags): New functions.

	* bmc-watchdog/, common/toolcommon/: Use new convenience functions
	appropriately.
	
2012-05-26  Albert Chu <chu11@llnl.gov>

	* bmc-config/, ipmi-pef-config/, ipmi-sensors-config/,
	ipmi-chassis-config/: Fix bug in which cipher suite ID input was
	not allowed.

	* man/manpage-common-sdr-options.man: Add extra info for
	sdr-cache-file option.

	* common/toolcommon/, man/: Undo split of SDR option
	"sdr-cache-directory" into separate macro/man option.

	* common/toolcommon/, man/: Split SDR option "sdr-cache-file" and
	"sdr-cache-directory" into separate macros/man files.

	* man/manpage-common-sdr-options-heading.man,
	man/manpage-common-sdr-options-file-directory.man: New files.